5.0.3~beta3 (2015-01-XX)
ADD: 240p, 360p and 480p

5.0.3~beta2 (2015-01-06)
UPD: Russian (thx 2 BytEvil)
UPD: Spanish (thx 2 PatOso)

5.0.3~beta1 (2015-01-02)
ADD: 'Disliked Videos'
UPD: Polish (thx 2 D.K.)
FIX: German translation
FIX: some Frodo updates

5.0.2 (2015-01-01)
ADD: Support for shared playlists via Yatse
ADD: 'Play from here' for playlists
ADD: 'Queue Video'
FIX: German translation
FIX: Portuguese (Brazil) (thx 2 ASH_Macedo)

5.0.1 (2014-12-31)
ADD: 'Play all' (default, reverse, shuffle)
ADD: Italian (thx 2 peppe_sr)
ADD: Portuguese (Brazil) (thx 2 ASH_Macedo)
ADD: Hungarian (thx 2 gyeben)
ADD: Portuguese (thx 2 enen92)
ADD: Polish (thx 2 D.K.)
ADD: Russian (thx 2 BytEvil)
ADD: Spanish (thx 2 PatOso)
ADD: French (thx 2 roondar)
UPD: support for '1080XF' and 'Xperience1080'
FIX: some live streams should work
FIX: update meta data for video played via ext. url
FIX: remove video from 'Watch Later' playlist
REV: reverted to requests

5.0.0 (2014-12-27)
DEL: removed beta
ADD: new rating system - like/dislike/remove
ADD: show confirmation before remove a video or deleting a playlist
ADD: rename your playlists
ADD: setup default view modes (default and videos)
ADD: setup correct language and region for YouTube
ADD: support for old YouTube url calls (plugin://plugin.video.youtube/?action=play_video&videoid=[ID])
UPD: new icons
UPD: reorganized context menu
UPD: some minor tests
UPD: moved 'Watch Later' up in context menu
FIX: rename playlist
FIX: show newest videos first (uploads of channel)
FIX: show fanarts in 'Watch Later' and 'Liked Videos'

1.0.0~alpha29 (2014-12-14)
UPD: new login mechanism (removed the old one)
ADD: translation fr-FR (thanks to roondar)
ADD: manage playlists - create, remove and add videos to a selected playlists
FIX: support cyrillic letters

1.0.0~alpha28 (2014-12-07)
ADD: subscribe to channel (from videos and playlist)
UPD: rework of handling context menu
FIX: remove next page for related videos (because APIv3 is broken)
