@@ -5,9 +5,6 @@ class AbstractContextUI(object):
     def __init__(self):
         pass
 
-    def __del__(self):
-        pass
-
     def create_progress_dialog(self, heading, text=None, background=False):
         raise NotImplementedError()
 
