@@ -5,9 +5,6 @@ class AbstractPlayer(object):
     def __init__(self):
         pass
 
-    def __del__(self):
-        pass
-
     def play(self, playlist_index=-1):
         raise NotImplementedError()
 
