@@ -5,9 +5,6 @@ class AbstractPlaylist(object):
     def __init__(self):
         pass
 
-    def __del__(self):
-        pass
-
     def clear(self):
         raise NotImplementedError()
 
