@@ -5,9 +5,6 @@ class AbstractProviderRunner(object):
     def __init__(self):
         pass
 
-    def __del__(self):
-        pass
-
     def run(self, provider, context=None):
         raise NotImplementedError()
 
