@@ -17,10 +17,6 @@ class XbmcRunner(AbstractProviderRunner):
         AbstractProviderRunner.__init__(self)
         pass
 
-    def __del__(self):
-        AbstractProviderRunner.__del__(self)
-        pass
-
     def run(self, provider, context=None):
         results = None
         try:
