@@ -10,10 +10,6 @@ class WatchLaterList(Storage):
         Storage.__init__(self, filename)
         pass
 
-    def __del__(self):
-        Storage.__del__(self)
-        pass
-
     def clear(self):
         self._clear()
         pass
