@@ -1,4 +1,5 @@
 5.0.3~beta3 (2015-01-XX)
+UPD: adjustment in KODION classes (maybe causing problems on MAC OS X 10.10.X)
 ADD: 240p, 360p and 480p
 
 5.0.3~beta2 (2015-01-06)
